# gwaggli-rust

./: README.md
gwaggli-rs/: Cargo.toml
gwaggli-rs/.cargo/: config.toml
gwaggli-rs/src/: main.rs
gwaggli-rs/src/audio/: microphone.rs  mod.rs  riff_wave.rs
gwaggli-rs/src/cli/: cli.rs  commands.rs
gwaggli-rs/src/environment/: fs.rs  http.rs  mod.rs
gwaggli-rs/src/event_system/: event_system.rs  events.rs  mod.rs  producer.rs
gwaggli-rs/src/task/: mod.rs  realtime_transcription.rs
gwaggli-rs/src/transcription/: fake.rs  fake_transcriber.rs  mod.rs  real_time.rs  transcribe.rs  whisper.rs
gwaggli-rs/src/util/: mod.rs
gwaggli-rs/src/utils/: sliding_window.rs
gwaggli-rs/tests/: cli_test.rs
