[package]
name = "gwaggli-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
whisper-rs = { version = "0.10.0", features = ["cuda"] }
reqwest = { version = "0.11.23", features = ["stream"] }
dirs = "5.0.1"
clap = { version = "4.4.13", features = ["derive"] }
indicatif = "0.17.7"
url = { version = "2.5.0", features = [] }
futures-util = "0.3.14"
tokio = { version = "1", features = ["full"] }