[package]
name = "gwaggli-rs"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.13", features = ["derive"] }
colored = "2.0"
cpal = "0.15.2"
dirs = "5.0.1"
futures-util = "0.3.14"
indicatif = "0.17.7"
rand = "0.8.5"
reqwest = { version = "0.11.23", features = ["stream"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.14"
url = { version = "2.5.0", features = [] }
whisper-rs = { version = "0.10.0", features = ["cuda"] }
futures = "0.3"

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.4"
