[package]
name = "gwaggli-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
whisper-rs = { version = "0.10.0", features = ["cuda"] }
reqwest = { version = "0.11.23", features = ["stream"] }
dirs = "5.0.1"
clap = { version = "4.4.13", features = ["derive"] }
indicatif = "0.17.7"
url = { version = "2.5.0", features = [] }
futures-util = "0.3.14"
tokio = { version = "1", features = ["full"] }
rand = "0.8.5"
colored = "2.0"
cpal = "0.15.2"

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.4"